{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 17,
  "lineage": "b4219596-4659-363b-fd8d-7b0a39dd805a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "debian_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-064519b8c76274859",
            "arn": "arn:aws:ec2:us-east-1:195275673106:instance/i-0eb3a298d4cec7040",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb3a298d4cec7040",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09388e00ab1912c26",
            "private_dns": "ip-172-31-33-226.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.226",
            "public_dns": "ec2-35-168-12-226.compute-1.amazonaws.com",
            "public_ip": "35.168.12.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0849dae1f4a7e8761",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_egress",
              "allow_http",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090378ee2f87d8a18",
            "tags": {
              "Name": "debian_ec2"
            },
            "tags_all": {
              "Name": "debian_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069c6cddb479e03d4",
              "sg-0a118b8ae4d2d6768",
              "sg-0bb062c76f2d1db96"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_prd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195275673106:internet-gateway/igw-06425da8eda079310",
            "id": "igw-06425da8eda079310",
            "owner_id": "195275673106",
            "tags": {
              "Name": "VExpenses-igw"
            },
            "tags_all": {
              "Name": "VExpenses-igw"
            },
            "vpc_id": "vpc-057a86944c469bd95"
          },
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rota_default_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06425da8eda079310",
            "id": "r-rtb-0a3f195228c9d85441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a3f195228c9d8544",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_prd",
            "aws_route_table.external_route_table",
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "external_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195275673106:route-table/rtb-0a3f195228c9d8544",
            "id": "rtb-0a3f195228c9d8544",
            "owner_id": "195275673106",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VExpenses-external-route-table"
            },
            "tags_all": {
              "Name": "VExpenses-external-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-057a86944c469bd95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "roteamento_externo_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0a87ae2b44703cf",
            "route_table_id": "rtb-0a3f195228c9d8544",
            "subnet_id": "subnet-09f461d97e3ba49d7"
          },
          "dependencies": [
            "aws_route_table.external_route_table",
            "aws_subnet.sub_ext_prod_a",
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "roteamento_externo_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ccab0023fdd2682",
            "route_table_id": "rtb-0a3f195228c9d8544",
            "subnet_id": "subnet-042c66ce147f388e4"
          },
          "dependencies": [
            "aws_route_table.external_route_table",
            "aws_subnet.sub_ext_prod_b",
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195275673106:security-group/sg-069c6cddb479e03d4",
            "description": "Permission Egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069c6cddb479e03d4",
            "ingress": [],
            "name": "allow_egress",
            "name_prefix": "",
            "owner_id": "195275673106",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_egress"
            },
            "tags_all": {
              "Name": "allow_egress"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d48d298db5abb98"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195275673106:security-group/sg-0a118b8ae4d2d6768",
            "description": "Remote access permission via Port 80 (http)",
            "egress": [],
            "id": "sg-0a118b8ae4d2d6768",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "195275673106",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d48d298db5abb98"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195275673106:security-group/sg-0bb062c76f2d1db96",
            "description": "Remote access permission via Port 22 (SSH)",
            "egress": [],
            "id": "sg-0bb062c76f2d1db96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "195275673106",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d48d298db5abb98"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_ext_prod_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195275673106:subnet/subnet-09f461d97e3ba49d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.110.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f461d97e3ba49d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275673106",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub_net_ext_prod_a"
            },
            "tags_all": {
              "Name": "sub_net_ext_prod_a"
            },
            "vpc_id": "vpc-057a86944c469bd95"
          },
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_ext_prod_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195275673106:subnet/subnet-042c66ce147f388e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.110.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042c66ce147f388e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275673106",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub_net_ext_prod_b"
            },
            "tags_all": {
              "Name": "sub_net_ext_prod_b"
            },
            "vpc_id": "vpc-057a86944c469bd95"
          },
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_int_prod_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195275673106:subnet/subnet-013053827b98ad9af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.110.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013053827b98ad9af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275673106",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub_net_int_prod_a"
            },
            "tags_all": {
              "Name": "sub_net_int_prod_a"
            },
            "vpc_id": "vpc-057a86944c469bd95"
          },
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_int_prod_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195275673106:subnet/subnet-0b7e1072c981848df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.110.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7e1072c981848df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275673106",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub_net_int_prod_b"
            },
            "tags_all": {
              "Name": "sub_net_int_prod_b"
            },
            "vpc_id": "vpc-057a86944c469bd95"
          },
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195275673106:vpc/vpc-057a86944c469bd95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.110.0.0/16",
            "default_network_acl_id": "acl-0bb01fd6fb87f2100",
            "default_route_table_id": "rtb-05dbe0538df5f6467",
            "default_security_group_id": "sg-03dc33f4de99d8f9d",
            "dhcp_options_id": "dopt-081576667c20d634d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-057a86944c469bd95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05dbe0538df5f6467",
            "owner_id": "195275673106",
            "tags": {
              "Name": "VExpenses-vpc"
            },
            "tags_all": {
              "Name": "VExpenses-vpc"
            }
          }
        }
      ]
    }
  ]
}